--- a/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
@@ -10,13 +10,14 @@
             android:layout_width="match_parent"
             android:layout_height="365dp"
             android:gravity="center">
+
             <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:text="Permanent Patient"
-                android:textSize="20dp"
                 android:id="@+id/doc_details"
-                ></Button>
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:text="Permanent Patient Registration"
+
+                android:textSize="20dp"></Button>
 
         </LinearLayout>
         <LinearLayout
@@ -24,9 +25,10 @@
             android:layout_height="365dp"
             android:gravity="center">
             <Button
+
                 android:layout_width="200dp"
                 android:layout_height="80dp"
-                android:text="Temporary Patient"
+                android:text="One time registration"
                 android:textSize="20dp"
                 android:id="@+id/reg_btn"
                 ></Button>
