--- a/frontEnd/MyApplication/app/src/main/res/layout/second_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/second_fragment.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="365dp"
+            android:layout_height="100dp"
             android:gravity="center">
             <Button
                 android:layout_width="200dp"
@@ -21,7 +21,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="365dp"
+            android:layout_height="100dp"
             android:gravity="center">
             <Button
                 android:layout_width="200dp"
@@ -29,6 +29,19 @@
                 android:text="Registration"
                 android:textSize="20dp"
                 android:id="@+id/reg_btn"
+                ></Button>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center">
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:text="Qr code"
+                android:textSize="20dp"
+                android:id="@+id/qr_generator"
                 ></Button>
 
         </LinearLayout>
