--- a/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
@@ -34,6 +34,20 @@
                 ></Button>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:gravity="center">
+
+            <Button
+
+                android:id="@+id/permanent_book_slot"
+                android:layout_width="206dp"
+                android:layout_height="100dp"
+                android:text="Book slot only for permanent members"
+                android:textSize="20dp"></Button>
+
+        </LinearLayout>
 
 
     </LinearLayout>
