connected 2 page with nodejs and android with retrofit where the entry of the permanent patient and temporary patient is done

--- a/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_doc_details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
