--- a/frontEnd/MyApplication/app/src/main/res/layout/qrscreen_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/qrscreen_fragment.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="@color/black"
         android:id="@+id/textView4"
         android:layout_width="413dp"
         android:layout_height="53dp"
@@ -37,6 +39,7 @@
         android:gravity="center"
         android:text="Register ID : "
         android:textSize="20dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/patientid"
@@ -49,6 +52,7 @@
         android:layout_height="36dp"
         android:gravity="center"
         android:textSize="20dp"
+        android:textColor="@color/string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
