--- a/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/background"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent">
 
     <TextView
@@ -13,6 +15,7 @@
         android:gravity="center"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/spinner_doc_details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -31,9 +34,11 @@
 
     <Button
         android:id="@+id/get_slot_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="64dp"
+        android:background="@drawable/btnbackground"
         android:text="Get Slot"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
