--- a/frontEnd/MyApplication/app/src/main/res/layout/first_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/first_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,9 +14,10 @@
             android:gravity="center">
             <TextView
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:textFontWeight="500"
                 android:textStyle="bold"
-                android:textSize="30dp"
+                android:textSize="50dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hello there!!!"></TextView>
@@ -26,11 +28,14 @@
             android:layout_height="match_parent"
             android:gravity="center">
 A
+
             <Button
                 android:id="@+id/btn1"
-                android:layout_width="179dp"
-                android:layout_height="100dp"
-                android:text="enter" />
+                android:layout_width="267dp"
+                android:layout_height="74dp"
+                android:background="@drawable/btnbackground"
+                android:text="enter"
+                android:textSize="20dp" />
         </LinearLayout>
     </LinearLayout>
 
