--- a/frontEnd/MyApplication/app/src/main/res/layout/general_registration.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/general_registration.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:layout_height="match_parent">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Only for permanent Patient"
         android:gravity="center"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/pname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="center"
+        android:textColor="@color/string"
         android:inputType="textPersonName"
         android:text=""
         android:hint="Enter the name"
@@ -38,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/string"
         android:gravity="center"
         android:hint="Enter the Birth date"
         android:inputType="date"
@@ -51,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/string"
         android:gravity="center"
         android:hint="Enter the phone number"
         android:inputType="phone"
@@ -65,6 +70,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="center"
+        android:textColor="@color/string"
         android:hint="Enter the Email id"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/pphone"
@@ -77,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/string"
         android:gravity="center"
         android:hint="Eneter the address"
         android:inputType="textMultiLine"
@@ -87,9 +94,11 @@
 
     <Button
         android:id="@+id/permanent_form_submit_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:background="@drawable/btnbackground"
         android:text="Submit"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,9 +108,11 @@
         android:id="@+id/radioGroup2"
         android:layout_width="388dp"
         android:layout_height="48dp"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/paddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pphone">
 
@@ -110,20 +121,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Male" />
 
         <RadioButton
             android:id="@+id/m2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Female" />
 
         <RadioButton
             android:id="@+id/m3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Others" />
     </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
