--- a/frontEnd/MyApplication/app/src/main/res/layout/qrcode_preview_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/qrcode_preview_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:layout_height="match_parent">
 
     <TextView
@@ -12,7 +13,8 @@
         android:layout_height="81dp"
         android:gravity="center"
         android:text="Your Registration Details"
-        android:textSize="30dp"
+        android:textSize="35dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/barcode_view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Patient ID:"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toStartOf="@+id/patient_id"
         app:layout_constraintHorizontal_bias="0.0"
@@ -44,6 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="20dp"
+        android:textColor="@color/string"
         app:layout_constraintBottom_toTopOf="@+id/slotId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -54,6 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Slot ID"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toStartOf="@+id/slotId"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +72,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="20dp"
+        android:textColor="@color/string"
         app:layout_constraintBottom_toTopOf="@+id/DoctorId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -74,6 +84,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Doctor Name"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toStartOf="@+id/DoctorId"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="20dp"
+        android:textColor="@color/string"
         app:layout_constraintBottom_toTopOf="@+id/timeid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -95,6 +109,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Time : "
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/go_to_home"
         app:layout_constraintEnd_toStartOf="@+id/timeid"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +121,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textSize="20dp"
+        android:textColor="@color/string"
         app:layout_constraintBottom_toTopOf="@+id/go_to_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -112,9 +130,11 @@
 
     <Button
         android:id="@+id/go_to_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="409dp"
+        android:layout_height="67dp"
+        android:background="@drawable/btnbackground"
         android:text="Home"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
