--- a/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
+            android:layout_marginTop="200dp"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:gravity="center">
 
+
             <Button
                 android:id="@+id/permentReg"
-                android:layout_width="200dp"
-                android:layout_height="100dp"
+                android:layout_width="320dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/btnbackground"
                 android:text="Permanent Patient Registration"
 
                 android:textSize="20dp"></Button>
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:gravity="center">
+
             <Button
 
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:text="One time registration"
-                android:textSize="20dp"
                 android:id="@+id/onetime"
-                ></Button>
+                android:layout_width="320dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/btnbackground"
+                android:text="One time registration"
+                android:textSize="20dp"></Button>
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="25dp"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
             android:gravity="center">
 
             <Button
 
                 android:id="@+id/permanent_book_slot"
-                android:layout_width="206dp"
-                android:layout_height="100dp"
+                android:layout_width="320dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/btnbackground"
                 android:text="Book slot only for permanent members"
                 android:textSize="20dp"></Button>
 
