--- a/frontEnd/MyApplication/app/src/main/res/layout/second_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/second_fragment.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:layout_height="match_parent">
     <LinearLayout
+        android:layout_marginTop="200dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:gravity="center">
+
             <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
-                android:text="Doctor Details"
-                android:textSize="20dp"
                 android:id="@+id/doc_details"
-                ></Button>
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/btnbackground"
+                android:text="Doctor Details"
+                android:textSize="20dp"></Button>
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:gravity="center">
             <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/btnbackground"
                 android:text="Registration"
                 android:textSize="20dp"
                 android:id="@+id/reg_btn"
@@ -33,13 +38,15 @@
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:gravity="center">
             <Button
-                android:layout_width="200dp"
-                android:layout_height="80dp"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
                 android:text="Qr code"
+                android:background="@drawable/btnbackground"
                 android:textSize="20dp"
                 android:id="@+id/qr_generator"
                 ></Button>
