--- a/frontEnd/MyApplication/app/src/main/res/values/colors.xml
+++ b/frontEnd/MyApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ED0C0C</color>
+    <color name="colorPrimaryDark">#BA1010</color>
+    <color name="colorAccent">#0320DA</color>
+    <color name="black">#000000</color>
+    <color name="string">#292727</color>
 </resources>
