--- a/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/book_slot_fragment.xml
@@ -9,13 +9,15 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select the doctor and get the slot number"
+        android:layout_width="410dp"
+        android:layout_height="113dp"
+        android:background="@drawable/card"
+        android:fontFamily="@font/amarante"
         android:gravity="center"
+        android:text="Select the doctor and get the slot number"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/spinner_doc_details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -34,11 +36,12 @@
 
     <Button
         android:id="@+id/get_slot_number"
-        android:layout_width="180dp"
-        android:layout_height="64dp"
+        android:layout_width="243dp"
+        android:layout_height="77dp"
         android:background="@drawable/btnbackground"
         android:text="Get Slot"
-        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
