--- a/frontEnd/MyApplication/app/src/main/res/layout/preview_sample_qr_fragment_permanent.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/preview_sample_qr_fragment_permanent.xml
@@ -9,12 +9,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="405dp"
+        android:layout_height="84dp"
+        android:background="@drawable/card"
+        android:fontFamily="@font/amarante"
+        android:gravity="center"
         android:text="Your QR CODE"
-        android:textStyle="italic|bold"
-        android:textSize="40dp"
         android:textColor="@color/black"
+        android:textSize="40dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/perBarPreview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,16 +42,18 @@
         app:layout_constraintBottom_toTopOf="@+id/gohome"
         app:layout_constraintEnd_toStartOf="@+id/ptpreviewid"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/card"
         app:layout_constraintTop_toBottomOf="@+id/perBarPreview"
         app:layout_constraintVertical_bias="0.52" />
 
     <TextView
         android:id="@+id/ptpreviewid"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="@color/string"
         android:textSize="20dp"
+        android:background="@drawable/card"
         app:layout_constraintBottom_toTopOf="@+id/gohome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
