--- a/frontEnd/MyApplication/app/src/main/res/layout/qrcode_preview_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/qrcode_preview_fragment.xml
@@ -9,7 +9,9 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="330dp"
+        android:layout_width="match_parent"
+        android:background="@drawable/card"
+        android:fontFamily="@font/amarante"
         android:layout_height="81dp"
         android:gravity="center"
         android:text="Your Registration Details"
@@ -22,6 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:layout_marginTop="20dp"
         android:id="@+id/barcode_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -31,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,8 +48,9 @@
         app:layout_constraintTop_toBottomOf="@+id/barcode_view" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/patient_id"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="20dp"
@@ -56,6 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/barcode_view" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,8 +74,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/slotId"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="20dp"
@@ -80,6 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/patient_id" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,8 +100,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/DoctorId"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="20dp"
@@ -104,6 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/slotId" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,8 +127,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
+        android:background="@drawable/card"
         android:id="@+id/timeid"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="20dp"
@@ -132,6 +143,7 @@
         android:id="@+id/go_to_home"
         android:layout_width="409dp"
         android:layout_height="67dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/btnbackground"
         android:text="Home"
         android:textSize="25dp"
