--- a/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
+++ b/frontEnd/MyApplication/app/src/main/res/layout/resgistration_first_fragment.xml
@@ -5,10 +5,28 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="REGISTRATION"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="40dp"
+            android:background="@drawable/card"
+            android:fontFamily="@font/amarante"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
         android:orientation="vertical">
         <LinearLayout
-            android:layout_marginTop="200dp"
+
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:gravity="center">
